[package]
name = "newsletter"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
reqwest = "0.13.1"
serde = { version = "1.0.228", features = ["derive"] }
config = "0.15.19"

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
